# training_mlflow

./: .gitignore  Exercise_1.ipynb  Exercise_2.ipynb  Exercise_3.ipynb  init_unix.sh  pyproject.toml  requirements.txt
data/: flat_data.csv
