[tool.poetry]
name = "MLflow Tuto"
version = "0.1"
description = "This repository proposes multiple exercises to have a better grasp on MLflow's features."
authors = ["Clément MOUTARD <clement.moutard@polytechnique.org>"]

[tool.poetry-dynamic-versioning]
enable = true
bump = true
vcs = "git"

[tool.poetry.dependencies]
python = "3.11.11"
mlflow = "2.3.0"
pandas = "1.5.3"
scikit-learn = "1.2.0"
shap = "0.41.0"
matplotlib = "3.7.0"
numpy = "1.21.5"
flaml = "1.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
